fix form spacing and borders

--- a/assets/sass/utility/form.scss
+++ b/assets/sass/utility/form.scss
@@ -51,8 +51,8 @@
         box-shadow: inset 0 1px 0 0 #DFDFDF;
     }
 
-    .tr-tabbed-box {
-        .control-row, .control-section {
+    .tr-tabbed-box .help-tab-content > {
+        .control-row, .control-section, .tr-tabbed-top {
             box-shadow: none !important;
         }
     }
@@ -86,6 +86,18 @@
         label {
             padding: 0;
         }
+    }
+}
+
+/* Exception Nesting
+----------------------------------------------------------------------- */
+#post-body-content > .typerocket-container >,
+#edittag > .typerocket-container >,
+#addtag > .typerocket-container >
+{
+    .control-row, .control-section, .tr-tabbed-top {
+        box-shadow: none !important;
+        padding: 10px 0;
     }
 }
 
